--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   google_fonts: ^2.3.1
+  firebase_core: ^1.13.1
+  google_sign_in: ^5.2.4
+  google_sign_in_web: ^0.10.0+5
+  shared_preferences: ^2.0.13
+
 
 
 dev_dependencies:
