--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,13 @@ dependencies:
   google_sign_in: ^5.2.4
   google_sign_in_web: ^0.10.0+5
   shared_preferences: ^2.0.13
-
+  google_ml_kit: ^0.7.3
+  camera: ^0.9.4+16
+  image_picker: ^0.8.4+11
+  image_picker_for_web: ^2.1.6
+  font_awesome_flutter: ^10.1.0
+  flutter_masked_text2: ^0.9.1
+  animated_card: ^2.0.0
 
 
 dev_dependencies:
