--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,15 +33,15 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-  google_fonts: ^2.3.1
-  firebase_core: ^1.13.1
-  google_sign_in: ^5.2.4
-  google_sign_in_web: ^0.10.0+5
+  cupertino_icons: ^1.0.4
+  google_fonts: ^2.3.2
+  firebase_core: ^1.16.0
+  google_sign_in: ^5.3.0
+  google_sign_in_web: ^0.10.1
   shared_preferences: ^2.0.13
-  google_ml_kit: ^0.7.3
-  camera: ^0.9.4+16
-  image_picker: ^0.8.4+11
+  google_ml_kit: ^0.11.0
+  camera: ^0.9.4+21
+  image_picker: ^0.8.5
   image_picker_for_web: ^2.1.6
   font_awesome_flutter: ^10.1.0
   flutter_masked_text2: ^0.9.1
